--- a/index.html
+++ b/index.html
@@ -1,45 +1,154 @@
+<!DOCTYPE html>
+<html lang="en">
+
 <html>
 
-<head>
-        <title>Grupo 3</title>
-        <link rel="stylesheet" href="estilo.css" />
-</head>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, inicial scale=1.0">
+    <link rel="stylesheet" href="estilo.css" />
+    <title>Formulario</title>
+  </head>
 
-<body>
-        <div id="conteudo" class="container">
-                <div id="cabecalho" class="row">
-                        <div class="col-md-12">
-                                <h1>Grupo 3</h1>
-                        </div>
-                </div>
+  <body>
+    <header>
+      <!--img class="background" src="./img/background5.jpg"-->
+    </header>
 
-                <nav>
-                        <div id="navbar">
-                                <div id=home class=col-md-4>
-                                        <a href="index.html">
-                                                <h3> Home </h3>
-                                        </a>
-                                </div>
-                                <div id=quemSomos class=col-md-4>
-                                        <a href="index.html">
-                                                <h3> Quem Somos </h3>
-                                        </a>
-                                </div>
-                        </div>
-                </nav>
+    <main class="container">
+      <form action="index.html" method="post">
+        <h1 id="titulo">Cadastro de Dados</h1>
+        <p>* campos obrigatórios</p></br>
+        <section class="linha1">
+          <div class="campo">
+            <label for="nome" class="required">Nome</label>
+            <input type="text" name="nome" id="nome" placeholder="Digite seu nome completo" required>
+          </div>
 
-                <div id="rodape">
-                        <div id="redessocias">
-                                <h2>Contatos:</h2>
-                        </div>
+          <div class="campo">
+            <label for="cpf" class="required">CPF</label>
+            <input type="text" name="cpf" id="cpf" placeholder="Apenas números" maxlength="11"
+            onblur="validacao(cpf.value)" required>
+          </div>
+        </section>
 
-                        <div id="email">
-                                <h2>Receba nossas promoções:</h2> </br>
-                                <input tipe="email" id="inputemail" placeholder="Digite seu e-mail" /></h2>
-                                <button> Enviar!</button>
-                        </div>
-                </div>
-        </div>
-</body>
+        <section class="linha2">
+          <div class="campo">
+            <label for="rg">RG</label>
+            <input type="text" name="rg" id="rg" placeholder="Apenas números">
+          </div>
 
+          <div class="campo">
+            <label for="data">Data de Nascimento</label>
+            <input type="date" name="data" id="data" placeholder="dd/mm/aaaa" maxlength="10">
+          </div>
+
+          <div class="campo">
+            <label>Gênero</label>
+            <select id="genero">
+              <option selected disabled value="">Selecione</option>
+              <option>Feminino</option>
+              <option>Masculino</option>
+              <option>Não-binário</option>
+            </select>
+          </div>
+        </section>
+
+        <section class="linha3">
+          <div class="campo">
+            <label for="cep">CEP</label>
+            <input type="text" name="cep" id="cep" placeholder="Apenas números" maxlength="8" 
+            onblur="autocep()">
+          </div>
+
+          <div class="campo">
+            <label for="endereco" class="required">Endereço</label>
+            <input type="text" name="endereco" id="endereco" placeholder="Avenida, rua..." required>
+          </div>
+        </section>
+
+        <section class="linha4">
+          <div class="campo">
+            <label for="numero" class="required">Número</label>
+            <input type="text" name="numero" id="numero" placeholder="ex.:00" required>
+          </div>
+
+          <div class="campo">
+            <label for="complemento">Complemento</label>
+            <input type="text" name="complemento" id="complemento" placeholder="Casa, apto...">
+          </div>
+
+          <div class="campo">
+            <label for="bairro">Bairro</label>
+            <input type="text" name="bairro" id="bairro" placeholder="Digite seu bairro">
+          </div>
+
+        </section>
+
+        <section class="linha5">
+          <div class="campo">
+            <label for="cidade">Cidade</label>
+            <input type="text" name="cidade" id="cidade" placeholder="Digite sua cidade">
+          </div>
+
+          <div class="campo">
+            <label>Estado</label>
+            <select id="estado">
+              <option selected disabled value="">Selecione</option>
+              <option>AC</option>
+              <option>AL</option>
+              <option>AP</option>
+              <option>AM</option>
+              <option>BA</option>
+              <option>CE</option>
+              <option>DF</option>
+              <option>ES</option>
+              <option>GO</option>
+              <option>MA</option>
+              <option>MG</option>
+              <option>MT</option>
+              <option>MS</option>
+              <option>PA</option>
+              <option>PB</option>
+              <option>PE</option>
+              <option>PI</option>
+              <option>PR</option>
+              <option>RJ</option>
+              <option>RN</option>
+              <option>RO</option>
+              <option>RR</option>
+              <option>RS</option>
+              <option>SC</option>
+              <option>SE</option>
+              <option>SP</option>
+              <option>TO</option>
+            </select>
+          </div>
+
+          <div class="campo">
+            <label for="email" class="required">E-mail</label>
+            <input type="email" name="email" id="email" placeholder="ex@email.com" required>
+          </div>
+        </section>
+
+        <section class="linha6">
+          <div class="campo">
+            <label for="fixo">Telefone Fixo</label>
+            <input type="text" name="fixo" id="fixo" placeholder="(00) 0000-0000" maxlength="14" 
+            onkeypress="mascaraFixo()">
+          </div>
+
+          <div class="campo">
+            <label for="celular" class="required">Telefone Celular</label>
+            <input type="text" name="celular" id="celular" placeholder="(00) 00000-0000" maxlength="15" 
+            onkeypress="mascaraCelular()" required>
+          </div>
+        </section></br>
+
+        <button type="submit" class="botao" onclick="enviar()">Concluir</button>
+
+      </form>
+    </main>
+  </body>
+  <script src="./script.js"></script>
 </html>
