correção do link no botão concluir

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
 
     <main class="container">
-      <form action="https://affectionate-minsky-841794.netlify.app/" method="post">
+      <form action="" method="post">
         <h1 id="titulo">Cadastro de Dados</h1>
         <p>* campos obrigatórios</p></br>
         <section class="linha1">
