--- a/index.html
+++ b/index.html
@@ -11,12 +11,8 @@
   </head>
 
   <body>
-    <header>
-      <!--img class="background" src="./img/background5.jpg"-->
-    </header>
-
     <main class="container">
-      <form action="" method="post">
+      <form>
         <h1 id="titulo">Cadastro de Dados</h1>
         <p>* campos obrigatórios</p></br>
         <section class="linha1">
